Raghavendra | #2434 | Fixed the print which was truncating some content at the end

--- a/src/main/less/print-custom.less
+++ b/src/main/less/print-custom.less
@@ -1,6 +1,7 @@
 @media print {
     body {
-        font-size: 9px;
+        font-size: 18px;
+        overflow-y: visible;
     }
     header {
         display: none;
